--- a/asciidoc-to-html-3-site/pom.xml
+++ b/asciidoc-to-html-3-site/pom.xml
@@ -19,28 +19,39 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <version>3.7</version>
-        <configuration>
-          <!-- disable generateReports if you don't want to include the built-in reports -->
-          <generateReports>true</generateReports>
-          <generateSitemap>true</generateSitemap>
-          <relativizeDecorationLinks>false</relativizeDecorationLinks>
-          <locales>en</locales>
-          <inputEncoding>UTF-8</inputEncoding>
-          <outputEncoding>UTF-8</outputEncoding>
-          <asciidoc>
-            <requires>
-              <require>asciidoctor-diagram</require>
-            </requires>
-            <!-- optional site-wide AsciiDoc attributes -->
-            <attributes>
-              <icons>font</icons>
-              <source-highlighter>coderay</source-highlighter>
-              <coderay-css>style</coderay-css>
-              <toclevels>2</toclevels>
-              <!--<imagesoutdir>target/site/img</imagesoutdir>s-->
-            </attributes>
-          </asciidoc>
-        </configuration>
+        <executions>
+          <execution>
+            <id>site</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>site</goal>
+            </goals>
+            <configuration>
+              <!-- disable generateReports if you don't want to include the built-in reports -->
+              <generateReports>true</generateReports>
+              <generateSitemap>true</generateSitemap>
+              <relativizeDecorationLinks>false</relativizeDecorationLinks>
+              <locales>en</locales>
+              <inputEncoding>UTF-8</inputEncoding>
+              <outputEncoding>UTF-8</outputEncoding>
+              <asciidoc>
+                <requires>
+                  <require>asciidoctor-diagram</require>
+                </requires>
+                <!-- optional site-wide AsciiDoc attributes -->
+                <attributes>
+                  <icons>font</icons>
+                  <source-highlighter>coderay</source-highlighter>
+                  <coderay-css>style</coderay-css>
+                  <toclevels>2</toclevels>
+                  <imagesoutdir>${project.basedir}/target/site/images</imagesoutdir>
+                </attributes>
+              </asciidoc>
+            </configuration>
+          </execution>
+
+        </executions>
+
         <dependencies>
           <dependency>
             <groupId>org.asciidoctor</groupId>
