--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
-    <asciidoctor.maven.plugin.version>1.5.7-SNAPSHOT</asciidoctor.maven.plugin.version>
+    <asciidoctor.maven.plugin.version>1.5.6</asciidoctor.maven.plugin.version>
     <asciidoctorj.version>1.5.7</asciidoctorj.version>
     <asciidoctorj.diagram.version>1.5.9</asciidoctorj.diagram.version>
     <jruby.version>9.1.17.0</jruby.version>
