--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,13 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
-    <asciidoctor.maven.plugin.version>1.5.6</asciidoctor.maven.plugin.version>
-    <asciidoctorj.version>1.5.7</asciidoctorj.version>
-    <asciidoctorj.diagram.version>1.5.9</asciidoctorj.diagram.version>
-    <jruby.version>9.1.17.0</jruby.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <asciidoctor.maven.plugin.version>2.0.0-RC.1</asciidoctor.maven.plugin.version>
+    <asciidoctorj.version>2.1.0</asciidoctorj.version>
+    <asciidoctorj.diagram.version>1.5.18</asciidoctorj.diagram.version>
+    <asciidoctorj.pdf.version>1.5.0-beta.6</asciidoctorj.pdf.version>
+    <jruby.version>9.2.8.0</jruby.version>
   </properties>
 
   <build>
